# microgrid_sim

./: .gitignore  CLI.md  LICENSE  README-zhcn.md  README.md  kaggle.ipynb  kaggle.md  main.ipynb  pyproject.toml  sitecustomize.py
data/: README.md
data/legacy/aggregated/mg_cigre/: load.csv  net.csv  net_consensus_debug.csv  other.csv  price.csv  pv.csv  wind.csv
data/legacy/aggregated/mg_res/: load.csv  pv.csv
data/legacy/yearly/load/: load_power_2023.csv  load_power_2024.csv
data/legacy/yearly/pv/: pv_power_yearly_los_angeles_2023.csv  pv_power_yearly_los_angeles_2024.csv
data/legacy/yearly/tariff/: price_profile.csv
data/legacy/yearly/weather/: los_angeles_pv_data_2023.csv  los_angeles_pv_data_2024.csv
data/processed/network_15min/cigre_eu_lv/: load.csv  pv.csv
data_template/mg_cigre/: load.csv  net.csv  other.csv  wind.csv
data_template/mg_res/: price.csv  pv.csv
experiments/: _cmd_run_cigre_gap_experiment.py  _cmd_run_residential_d4_experiment.py  _cmd_run_residential_d9_grid_search.py  run_experiments.py
microgrid-paper/: Highlights.docx
microgrid-paper/bib/: references.bib
microgrid-paper/figures/canvas/: fig1.pptx  fig2.pptx  fig3.pptx  figures.md
microgrid-paper/figures/eps/: CASE_monthly_pbm_advantage_pair.eps  CASE_seed_cost_dumbbell_pair.eps  CIGRE_E10_3D_efficiency_scatter_charge.eps  CIGRE_E10_3D_efficiency_scatter_discharge.eps  CIGRE_E9E_efficiency_hist_kde.eps  CIGRE_E9E_physical_stress_ecdf.eps  CIGRE_eta100_cumulative_cost.eps  MGRES_E10_3D_efficiency_scatter_charge.eps  MGRES_E10_3D_efficiency_scatter_discharge.eps  MGRES_E9E_efficiency_hist_kde.eps  MGRES_dispatch_zoom_window.eps  MGRES_eta100_cumulative_cost.eps  SAC Optimized Microgrid Energy Management Architecture.eps  Y8_pareto_front_daily.eps  Z1_OCV_SOC_curve.eps  Z2_Rint_SOC_Temp.eps  case_study_ieee33_cross_fidelity_heatmap.eps  case_study_mixed_fidelity_tradeoff.eps  case_study_storage_value_sanity.eps
microgrid-paper/figures/tikz/: MG1.tex  MG2.tex
scripts/analysis/: cigre_milp_sensitivity.py  fidelity_regime_map.py  fidelity_summary_tables.py  full_year_heuristic_lite_compare.py  full_year_oracle_compare.py  full_year_storage_compare.py  genetic_dispatch_baseline.py  ieee33_gatepass_battery_morphology.py  ieee33_reward_wrapper_diagnostics.py  paper_appendix_analysis.py  short_cross_fidelity_probe.py
scripts/plot/: paper_case_study_figures.py  paper_physics_graphics.py
scripts/weather-crawl/: build_reference_profiles.py
src/microgrid_sim/: __init__.py  cases.py  cli.py  d4pg_agent.py  paper_compat.py  paths.py  rl_utils.py  time_utils.py
src/microgrid_sim/baselines/: __init__.py  dispatch.py
src/microgrid_sim/data/: __init__.py  network_profiles.py  profiles.py  weather_profiles.py
src/microgrid_sim/envs/: __init__.py  cigre.py  microgrid.py  network_microgrid.py  observation_builder.py  reward_builder.py  wrappers.py
src/microgrid_sim/io/: __init__.py  reader.py
src/microgrid_sim/models/: __init__.py  battery.py  cigre_components.py
src/microgrid_sim/network/: __init__.py  constraints.py  metrics.py
tests/analysis/: test_fidelity_regime_map.py  test_fidelity_summary_tables.py  test_genetic_dispatch_baseline.py  test_milp_dispatch_baseline.py  test_paper_case_study_figures.py  test_short_cross_fidelity_probe.py
tests/data/: test_network_profiles.py  test_reader_layout.py  test_weather_profiles.py
tests/envs/: test_network_microgrid_env.py  test_observation_builder.py  test_reward_builder.py  test_wrappers.py
tests/models/: test_network_bess_params.py
tests/network/: test_cigre_lv_builder.py  test_ieee33_builder.py  test_injection_mapper.py  test_pandapower_runner.py
(+14 files in other folders)
