[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "microgrid-sim"
version = "0.1.1"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "WeijiaTang", email = "tangwj2023@dgut.edu.cn" }
]
keywords = ["microgrid", "deep-reinforcement-learning", "battery", "energy-management"]

dependencies = [
    "gymnasium",
    "matplotlib",
    "numpy",
    "pandas",
    "pandapower",
    "requests",
    "scipy",
    "stable-baselines3",
    "sb3-contrib",
    "tensorboard",
    "tqdm",
]
[project.optional-dependencies]
# Optional D4PG support. PPO/SAC/TD3/DQN baselines do not require DI-engine.
d4pg = [
    "DI-engine==0.5.3",
    "easydict",
]

# Optional CUDA build for local GPU training. Core sync falls back to the
# default torch selected by stable-baselines3.
cuda124 = [
    "torch==2.6.0+cu124",
    "torchvision==0.21.0+cu124",
    "torchaudio==2.6.0+cu124",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" }
]
torchvision = [
    { index = "pytorch-cu124" }
]
torchaudio = [
    { index = "pytorch-cu124" }
]

[tool.uv]
index = [
    { name = "pytorch-cu124", url = "https://download.pytorch.org/whl/cu124", explicit = true }
]

[tool.microgrid_sim]
torch_install_command = "uv sync --extra cuda124"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["microgrid_sim*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
